# profiling_toolkit

./: .gitignore  01_connector.py  README.md  backends.json  docker-compose.yml  el.py  hello.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  tasks.py  test.py
.streamlit/: config.toml
pages/: +layout.svelte  02_selector.py  03_profiling.py  index.md
pages/[tables]/: index.md
pages/[tables]/[columns]/: [pattern].md  index.md
scripts/: delete.py  load.py  pattern.py  sql.py  summary.py
sources/profiling/: connection.yaml  database.duckdb  information_schema.sql
sources/profiling/main/: orders.sql
sources/profiling/patterns/: pattern_orders.sql
sources/profiling/summaries/: summary_orders.sql
