[project]
name = "profiling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.2",
    "ibis-framework>=9.5.0",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "pyarrow-hotfix>=0.6",
    "streamlit>=1.39.0",
    "watchdog>=5.0.3",
]
