[project]
name = "profiling-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.2",
    "ibis-framework[duckdb,mssql]>=9.5.0",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "pyarrow-hotfix>=0.6",
    "pyodbc>=5.2.0",
    "streamlit-aggrid>=1.0.5",
    "streamlit>=1.39.0",
    "watchdog>=5.0.3",
]
